# card_games

./: .buildinfo  .dockerignore  .gitignore  CardGamesMain.py  DockerCardGamesRunner.py  DockerEntry.py  Dockerfile  LICENSE  README.md  genindex.html  gonzo_card_games.CardDeck.html  gonzo_card_games.RatScrew.html  gonzo_card_games.Templates.html  gonzo_card_games.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  test_CardGamesMain.py  test_DockerCardGamesRunner.py
.doctrees/: environment.pickle  gonzo_card_games.CardDeck.doctree  gonzo_card_games.RatScrew.doctree  gonzo_card_games.Templates.doctree  gonzo_card_games.doctree  index.doctree
.github/workflows/: ci.yaml  docs.yaml  python-tests.yaml
CardDeck/: Card.py  CardDeck.py  __init__.py  test_Card.py  test_CardDeck.py
CardDeckObjects/: CardDeck.py  __init__.py  test_Card.py  test_CardDeck.py
RatScrew/: Game.py  Player.py  RoundCardStack.py  __init__.py  test_Game.py  test_Player.py  test_RoundCardStack.py
RatScrewObjects/: RatScrewGame.py  RatScrewPlayer.py  RoundCardStack.py  __init__.py  test_RatScrewGame.py  test_RatScrewPlayer.py  test_RoundCardStack.py
_modules/: index.html
_sources/: gonzo_card_games.CardDeck.rst.txt  gonzo_card_games.RatScrew.rst.txt  gonzo_card_games.Templates.rst.txt
docs/: card_games.CardDeck.rst  card_games.RatScrew.rst  card_games.Templates.rst  card_games.rst  conf.py  gonzo_card_games.rst  index.rst
src/card_games/: __init__.py
src/gonzo_card_games/: __init__.py
tests/CardDeck/: test_Card.py  (+1 more)
(+29 files in other folders)
