[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/card_games"]

[project]
name = "card-games"
version = "1.0.0"
requires-python = ">=3.10"
authors = [
  {name = "Alejandro (Gonzo) Gonzalez", email = "agonzalez1043@gmail.com"},
]
description = "Virtualization of card games with a standard deck"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["cards", "card", "card deck", "rat screw", "egyption rat screw", "egyption wrath"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/gonz1247/card_games"
Repository = "https://github.com/gonz1247/card_games.git"
Documentation = "https://gonz1247.github.io/card_games/"
